# powerpi

./: LICENSE  README.md  TODO  pyproject.toml  readpower.py
powerpi/: powerreader.py
reader/: PZEM.py  reader.py
